[package]
name = "image_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]

[dependencies.js-sys]
version = "0.3"