[package]
name = "image_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
]
